#240 closed bug (fixed)
Shutting down doesn't work when an application hangs
Reported by: | axeld | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When you run Chart in direct window mode it will hang when closed (or during shutdown). The shutdown process correctly halts and asks me if I wanted to kill that application, but when I do so, nothing happens anymore. The kill button hides, and the "Cancel Shutdown" button has no effect whatsoever. Tested with hrev16557.
Change History (6)
comment:1 by , 19 years ago
comment:2 by , 19 years ago
While the application can be killed now (didn't work before because of a bug in wait_for_thread()), the shutdown process should ignore apps that cannot be killed for whatever reason.
comment:3 by , 19 years ago
Status: | new → closed |
---|
comment:4 by , 19 years ago
Resolution: | → fixed |
---|
comment:5 by , 19 years ago
In revision 16778 we send a SIGKILL instead of calling kill_team(). So the shutdown process can no longer hang when killing a team (at least theoretically).
comment:6 by , 19 years ago
Dunno why kill_thread() waited for the thread to be killed, but it no longer does this; I've reverted your change to ShutdownProcess.cpp, as it's no longer necessary.
I confirm this bug, which has existed for several revisions now. The Shutdown/Restart functionality is a little shaky in general.