We use send_signal(..., SIGKILL) to kill a team instead of kill_team() now, since the latter one can hang. Closes bug #240.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16778 a95241bf-73f2-0310-859d-f6bbb57e9c96